<resources>
    <string name="app_name">FunWithFlags App</string>
    <string name="email_txt">Email</string>
    <string name="user_txt">User Name</string>
    <string name="country_txt">Country</string>
    <string name="password_txt">Password</string>
    <string name="register_txt">Register</string>
    <string name="top_title">Welcome to FunWithFlags!</string>
    <string name="Login_btn_txt">Log In</string>
    <string name="Logout_btn_txt">Log Out</string>
    <string name="create_Account">Create a new Account!</string>
    <string name="registerPage_txt">Register Page</string>
    <string name="menu_txt">Menu FunWithFlags</string>
    <string name="Hard_txt">Hard</string>
    <string name="Medium_txt">Medium</string>
    <string name="Easy_txt">Easy</string>
    <string name="blessing.txt">Hello</string>
    <string name="guide.txt" translatable="false"></string>
    <string name="timeLeft.txt">Left Time:</string>
    <string name="tomenu_txt">Menu</string>
    <string name="scoreTable_txt">Score Table</string>
    <string name="music_txt">Music</string>
    <string name="english_rd_txt">EN</string>
    <string name="hebrew_rd_txt">HE</string>
    <string name="rememberMe_txt">Remember Me</string>
    <string name="Game_txt">Game</string>
    <string name="Summery_txt">Summery</string>
    <string name="ScoreScreen_txt">ScoreScreen</string>
    <string name="name">Name:</string>
    <string name="level">Level:</string>
    <string name="score">Score:</string>
    <string name="time">Time:</string>
    <string name="score_title">" Email  |  Username   |  Score "</string>



    <string name="Afghanistan">Afghanistan</string>
    <string name="Algeria">Algeria</string>
    <string name="Andorra">Andorra</string>
    <string name="Argentina">Argentina</string>
    <string name="Armenia">Armenia</string>
    <string name="Australia">Australia</string>
    <string name="Austria">Austria</string>
    <string name="Azerbaijan">Azerbaijan</string>
    <string name="Belgium">Belgium</string>
    <string name="Bolivia">Bolivia</string>
    <string name="BosniaandHerzegovina">Bosnia and Herzegovina</string>
    <string name="Brazil">Brazil</string>
    <string name="Bulgaria">Bulgaria</string>
    <string name="Canada">Canada</string>
    <string name="Chile">Chile</string>
    <string name="China">China</string>
    <string name="Colombia">Colombia</string>
    <string name="Croatia">Croatia</string>
    <string name="Cyprus">Cyprus</string>
    <string name="Denmark">Denmark</string>
    <string name="Egypt">Egypt</string>
    <string name="Eritrea">Eritrea</string>
    <string name="Ethiopia">Ethiopia</string>
    <string name="France">France</string>
    <string name="Georgia">Georgia</string>
    <string name="Germany">Germany</string>
    <string name="Greece">Greece</string>
    <string name="Honduras">Honduras</string>
    <string name="Hungary">Hungary</string>
    <string name="Iceland">Iceland</string>
    <string name="India">India</string>
    <string name="Iran">Iran</string>
    <string name="Iraq">Iraq</string>
    <string name="Ireland">Ireland</string>
    <string name="Israel">Israel</string>
    <string name="Italy">Italy</string>
    <string name="Japan">Japan</string>
    <string name="Jordan">Jordan</string>
    <string name="Kazakhstan">Kazakhstan</string>
    <string name="NorthKorea">North Korea</string>
    <string name="SouthKorea">South Korea</string>
    <string name="Lebanon">Lebanon</string>
    <string name="Liechtenstein">Liechtenstein</string>
    <string name="Mexico">Mexico</string>
    <string name="Netherlands">Netherlands</string>
    <string name="Nigeria">Nigeria</string>
    <string name="Pakistan">Pakistan</string>
    <string name="Paraguay">Paraguay</string>
    <string name="Peru">Peru</string>
    <string name="Poland">Poland</string>
    <string name="Portugal">Portugal</string>
    <string name="Qatar">Qatar</string>
    <string name="Romania">Romania</string>
    <string name="RussianFederation">Russian Federation</string>
    <string name="Singapore">Singapore</string>
    <string name="SouthAfrica">South Africa</string>
    <string name="Spain">Spain</string>
    <string name="Sudan">Sudan</string>
    <string name="Sweden">Sweden</string>
    <string name="Switzerland">Switzerland</string>
    <string name="SyrianArabRepublic">Syrian Arab Republic</string>
    <string name="Turkey">Turkey</string>
    <string name="Uganda">Uganda</string>
    <string name="Ukraine">Ukraine</string>
    <string name="UnitedArabEmirates">United Arab Emirates</string>
    <string name="UnitedKingdom">United Kingdom</string>
    <string name="UnitedStatesofAmerica">United States of America</string>
    <string name="Uruguay">Uruguay</string>
    <string name="Albania">Albania</string>
    <string name="Angola">Angola</string>
    <string name="Bahrain">Bahrain</string>
    <string name="Belarus">Belarus</string>
    <string name="Cambodia">Cambodia</string>
    <string name="CentralAfricanRepublic">Central African Republic</string>
    <string name="Congo">Congo</string>
    <string name="CostaRica">Costa Rica</string>
    <string name="Cuba">Cuba</string>
    <string name="Czechia">Czechia</string>
    <string name="Dominica">Dominica</string>
    <string name="DominicanRepublic">Dominican Republic</string>
    <string name="Ecuador">Ecuador</string>
    <string name="Estonia">Estonia</string>
    <string name="Finland">Finland</string>
    <string name="Gambia">Gambia</string>
    <string name="Ghana">Ghana</string>
    <string name="Guatemala">Guatemala</string>
    <string name="Guinea">Guinea</string>
    <string name="Guyana">Guyana</string>
    <string name="Haiti">Haiti</string>
    <string name="Indonesia">Indonesia</string>
    <string name="Jamaica">Jamaica</string>
    <string name="Kyrgyzstan">Kyrgyzstan</string>
    <string name="Latvia">Latvia</string>
    <string name="Luxembourg">Luxembourg</string>
    <string name="Madagascar">Madagascar</string>
    <string name="Malaysia">Malaysia</string>
    <string name="Maldives">Maldives</string>
    <string name="Malta">Malta</string>
    <string name="MarshallIslands">Marshall Islands</string>
    <string name="Mongolia">Mongolia</string>
    <string name="Namibia">Namibia</string>
    <string name="Nauru">Nauru</string>
    <string name="NewZealand">New Zealand</string>
    <string name="Oman">Oman</string>
    <string name="Panama">Panama</string>
    <string name="SaudiArabia">Saudi Arabia</string>
    <string name="Senegal">Senegal</string>
    <string name="Slovakia">Slovakia</string>
    <string name="Slovenia">Slovenia</string>
    <string name="SriLanka">Sri Lanka</string>
    <string name="Tanzania">Tanzania</string>
    <string name="Thailand">Thailand</string>
    <string name="Uzbekistan">Uzbekistan</string>
    <string name="Venezuela">Venezuela</string>
    <string name="Zambia">Zambia</string>
    <string name="Zimbabwe">Zimbabwe</string>
    <string name="AntiguaandBarbuda">Antigua and Barbuda</string>
    <string name="Bahamas">Bahamas</string>
    <string name="Bangladesh">Bangladesh</string>
    <string name="Barbados">Barbados</string>
    <string name="Belize">Belize</string>
    <string name="Benin">Benin</string>
    <string name="Bhutan">Bhutan</string>
    <string name="Botswana">Botswana</string>
    <string name="BruneiDarussalam">Brunei Darussalam</string>
    <string name="BurkinaFaso">Burkina Faso</string>
    <string name="Burundi">Burundi</string>
    <string name="CaboVerde">Cabo Verde</string>
    <string name="Cameroon">Cameroon</string>
    <string name="Chad">Chad</string>
    <string name="Comoros">Comoros</string>
    <string name="DemocraticRepublicofthecongo">Democratic Republic of the congo</string>
    <string name="Djibouti">Djibouti</string>
    <string name="ElSalvador">El Salvador</string>
    <string name="EquatorialGuinea">Equatorial Guinea</string>
    <string name="Eswatini">Eswatini</string>
    <string name="Fiji">Fiji</string>
    <string name="Gabon">Gabon</string>
    <string name="Grenada">Grenada</string>
    <string name="GuineaBissau">Guinea-Bissau</string>
    <string name="Kenya">Kenya</string>
    <string name="Kiribati">Kiribati</string>
    <string name="Kuwait">Kuwait</string>
    <string name="LaoRepublic">Lao Republic</string>
    <string name="Lesotho">Lesotho</string>
    <string name="Liberia">Liberia</string>
    <string name="Libya">Libya</string>
    <string name="Lithuania">Lithuania</string>
    <string name="Malawi">Malawi</string>
    <string name="Mali">Mali</string>
    <string name="Mauritania">Mauritania</string>
    <string name="Mauritius">Mauritius</string>
    <string name="Micronesia">Micronesia</string>
    <string name="MoldovaRepublic">Moldova Republic </string>
    <string name="Monaco">Monaco</string>
    <string name="Montenegro">Montenegro</string>
    <string name="Morocco">Morocco</string>
    <string name="Mozambique">Mozambique</string>
    <string name="Myanmar">Myanmar</string>
    <string name="Nepal">Nepal</string>
    <string name="Nicaragua">Nicaragua</string>
    <string name="Niger">Niger</string>
    <string name="NorthMacedonia">North Macedonia</string>
    <string name="Norway">Norway</string>
    <string name="Palau">Palau</string>
    <string name="PapuaNewGuinea">Papua New Guinea</string>
    <string name="Philippines">Philippines</string>
    <string name="Rwanda">Rwanda</string>
    <string name="SaintKittsandNevis">Saint Kitts and Nevis</string>
    <string name="SaintLucia">Saint Lucia</string>
    <string name="SaintVincentandtheGrenadines">Saint Vincent and the Grenadines</string>
    <string name="Samoa">Samoa</string>
    <string name="SanMarino">San Marino</string>
    <string name="SaoTomeandPrincipe">Sao Tome and Principe</string>
    <string name="Serbia">Serbia</string>
    <string name="Seychelles">Seychelles</string>
    <string name="SierraLeone">Sierra Leone</string>
    <string name="SolomonIslands">Solomon Islands</string>
    <string name="Somalia">Somalia</string>
    <string name="SouthSudan">South Sudan</string>
    <string name="Suriname">Suriname</string>
    <string name="Tajikistan">Tajikistan</string>
    <string name="TimorLeste">Timor-Leste</string>
    <string name="Togo">Togo</string>
    <string name="Tonga">Tonga</string>
    <string name="TrinidadandTobago">Trinidad and Tobago</string>
    <string name="Tunisia">Tunisia</string>
    <string name="Turkmenistan">Turkmenistan</string>
    <string name="Tuvalu">Tuvalu</string>
    <string name="Vanuatu">Vanuatu</string>
    <string name="VietNam">Viet Nam</string>
    <string name="Yemen">Yemen</string>




</resources>