<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/remember_checkbox"
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/mail_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"

            android:gravity="center"
            android:hint="@string/email_txt"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/pass_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/pass_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password_txt"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.143" />

        <android.widget.Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/botton_shape"
            android:text="@string/Login_btn_txt"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.27" />

        <android.widget.Button
            android:id="@+id/create_account_btn"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/create_account_btn"
            android:text="@string/create_Account"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.485" />

        <CheckBox
            android:id="@+id/checkBoxRememberMe"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:background="@drawable/create_account_btn"
            android:gravity="center"
            android:text="@string/rememberMe_txt"
            android:textColor="@color/red"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.378" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="141dp"
            android:layout_height="63dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.613"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/radio_hebrew"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/botton_shape"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/hebrew_rd_txt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.317"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.499" />

            <RadioButton
                android:id="@+id/radio_english"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/botton_shape"
                android:checked="true"
                android:gravity="center"
                android:text="@string/english_rd_txt" />

        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>