<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gamebackgroung">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_txt"
        android:layout_width="403dp"
        android:layout_height="227dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132"
        app:lottie_autoPlay="true"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/summery_name"
        android:layout_width="78dp"
        android:layout_height="65dp"
        android:height="20dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/to_menu_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_txt"
        app:layout_constraintVertical_bias="0.136"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/summery_name_result"
        android:layout_width="78dp"
        android:layout_height="65dp"
        android:height="20dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/to_menu_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_txt"
        app:layout_constraintVertical_bias="0.136"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/summery_level"
        android:layout_width="78dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="@string/level"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/to_menu_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_txt"
        app:layout_constraintVertical_bias="0.441"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/summery_level_result"
        android:layout_width="78dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/to_menu_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_txt"
        app:layout_constraintVertical_bias="0.441"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/summery_score"
        android:layout_width="78dp"
        android:layout_height="58dp"
        android:gravity="center"
        android:text="@string/score"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/to_menu_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_txt"
        app:layout_constraintVertical_bias="0.722"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/summery_score_result"
        android:layout_width="78dp"
        android:layout_height="58dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/to_menu_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_txt"
        app:layout_constraintVertical_bias="0.722"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/summery_time"
        android:layout_width="79dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/time"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/to_menu_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_txt"
        app:layout_constraintVertical_bias="0.977"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/summery_time_result"
        android:layout_width="79dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/to_menu_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animation_txt"
        app:layout_constraintVertical_bias="0.977"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/to_menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tomenu_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>